# corgicoin

./: .gitignore  BUILD.cmake.md  CMakeLists.txt  COPYING  INSTALL  MODERNIZATION.md  MODERNIZATION_COMPLETE.md  OPENSSL_MIGRATION.md  QT5_MIGRATION.md  README.md  RELEASE_FOLDER_MODERNIZATION.md  ROADMAP-PUMPFUN.md  build_mac.sh  corgicoin-qt.pro
.github/workflows/: build.yml
cmake/Modules/: FindBerkeleyDB.cmake
contrib/bridge/: .gitignore  README.md  bridge.py  partners.json  requirements.txt
contrib/bridge/tests/: test_burns.py  test_dispatch.py  test_reconcile.py  test_rpc.py  test_state.py
contrib/macdeploy/: Info.plist
doc/: Doxyfile  README  README_windows.txt  Tor.txt  build-msw.txt  build-osx.txt  build-tests.md  build-unix.txt  burn-payload-spec.md  coding.txt  phase2-partner-program.md
release/: README.txt  corgicoin.conf
share/: setup.nsi  ui.rc
share/pixmaps/: corgicoin32.xpm  corgicoin80.xpm
share/qt/: extract_strings_qt.py  make_windows_icon.sh
src/: addrman.cpp  addrman.h  allocators.h  base58.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  burnpayload.h  checkpoints.cpp  checkpoints.h  compat.h  compat_bdb.h  compat_boost.h  compat_openssl.h  corgicoinrpc.cpp  corgicoinrpc.h  crypter.cpp  crypter.h  db.cpp  db.h  init.cpp  init.h  irc.cpp  irc.h  key.cpp  key.h  keystore.cpp  keystore.h  logging.cpp  logging.h  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  mruset.h  net.cpp  net.h  netbase.cpp  (+23 more)
src/json/: json_compat.cpp  json_compat.h
src/qt/: aboutdialog.h  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.mm  miningpage.cpp  miningpage.h  monitoreddatamapper.h  notificator.cpp  notificator.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  qrcodedialog.cpp  qrcodedialog.h  qtipcserver.cpp  qvalidatedlineedit.h  qvaluecombobox.cpp  rpcconsole.cpp  (+18 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  miningpage.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  signverifymessagedialog.ui
src/qt/res/: corgicoin-qt.rc
src/qt/res/icons/: bitcoin.icns
src/qt/res/movies/: update_spinner.mng
src/qt/res/src/: update_spinner.psd
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  address_tests.cpp  blockreward_tests.cpp  burnpayload_tests.cpp  getarg_tests.cpp  key_tests.cpp  multisig_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scrypt_tests.cpp  serialize_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  wallet_tests.cpp
